# pyBandits

./: README.md  demo.py  pyproject.toml
data/: data.py  ucb-data.csv
